syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "ServerProto";

package GrupoB.gRPCService.ServerProto;

service Server {
    rpc ping (EmptyMessage) returns (BooleanMessage) {}
    rpc join (NodeJoin) returns (NetworkInfo) {}
}

message NodeJoin {
    string address = 1;
    int32 port = 2;
    string work = 3;
}

message NetworkInfo {
    string nodeID = 1;
    NodeInfo peer = 2;
    bool pow = 3;
}

message NodeInfo {
    string address = 1;
    int32 port = 2;
    string nodeID = 3;
}

message EmptyMessage {
}

message BooleanMessage {
    bool result = 1;
}